fix toggle pill icon spacing

--- a/sass/ui-components/_toggle-pill.scss
+++ b/sass/ui-components/_toggle-pill.scss
@@ -118,6 +118,7 @@ Checkbox form elements styled as toggle buttons.
 
 .toggleButton-icon {
 	@include color-all($C_textHint);
+	margin-left: 0.5em; // relative sizing because icon could be 's' or 'xs'
 }
 
 .toggleButton-icon--inactive {
@@ -155,8 +156,4 @@ Checkbox form elements styled as toggle buttons.
 			display: none;
 		}
 	}
-}
-
-.toggleButton-icon {
-	margin-left: $space-quarter;
 }
